Update .env.example to include AGENT_RUNTIME_ARN and MEMORY_ARN for AWS integration

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-OPENAI_API_KEY=your-api-key-here
+AGENT_RUNTIME_ARN=arn:aws:bedrock-agentcore:us-west-2:YOUR_ACCOUNT:runtime/YOUR_AGENT
+MEMORY_ARN=arn:aws:bedrock-agentcore:us-west-2:YOUR_ACCOUNT:memory/YOUR_MEMORY
